force-app/main/default/objects/Duplicate_Merge_Record__c/Duplicate_Merge_Record__c.object-meta.xml
<CustomObject>
  <label>Duplicate Merge Record</label>
  <nameField>
    <displayFormat>DMREC-{000000}</displayFormat>
    <label>Merge Record Number</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Duplicate Merge Records</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>