force-app/main/default/objects/Duplicate_Merge_Record__c/fields/Merge_Run__c.field-meta.xml
<CustomField>
  <fullName>Merge_Run__c</fullName>
  <deleteConstraint>SetNull</deleteConstraint>
  <label>Merge Run</label>
  <referenceTo>Duplicate_Merge_Run__c</referenceTo>
  <relationshipLabel>Duplicate Merge Records</relationshipLabel>
  <relationshipName>DuplicateMergeRecords</relationshipName>
  <type>Lookup</type>
</CustomField>