force-app/main/default/objects/Duplicate_Merge_Record__c/fields/Merged_Into_Record_Id__c.field-meta.xml
<CustomField>
  <fullName>Merged_Into_Record_Id__c</fullName>
  <label>Merged Into Record Id</label>
  <length>18</length>
  <type>Text</type>
</CustomField>