force-app/main/default/objects/Duplicate_Merge_Record__c/fields/Snapshot_JSON__c.field-meta.xml
<CustomField>
  <fullName>Snapshot_JSON__c</fullName>
  <label>Snapshot JSON</label>
  <length>32768</length>
  <type>LongTextArea</type>
</CustomField>