force-app/main/default/objects/Duplicate_Merge_Record__c/fields/Soft_Merge_Status__c.field-meta.xml
<CustomField>
  <fullName>Soft_Merge_Status__c</fullName>
  <label>Soft Merge Status</label>
  <type>Picklist</type>
  <valueSet>
    <restricted>true</restricted>
    <valueSetDefinition>
      <value>
        <fullName>Merged</fullName>
        <default>true</default>
        <label>Merged</label>
      </value>
      <value>
        <fullName>Archived</fullName>
      </value>
    </valueSetDefinition>
  </valueSet>
</CustomField>