force-app/main/default/objects/Duplicate_Merge_Record__c/fields/Source_Display__c.field-meta.xml
<CustomField>
  <fullName>Source_Display__c</fullName>
  <label>Source Display</label>
  <length>255</length>
  <type>Text</type>
</CustomField>